# RandomFracturePatterns

./: .gitignore  Pipfile  README.md  evaluate.ipynb  pictures.ipynb  pyproject.toml  pyvenv.cfg  requirements.txt
src/: gs_generator.py  main.py  mesh_helpers.py  path_helper.py  to_image.py
src/dask_example/: dask_example.py
src/deprecated/: isoline_plotters_deprecated.py  isolines_analysis_deprecated.py
src/fracsim/deprecated/: isoline_plotters_deprecated.py
src/fracsim/measure/: curvature.py  fractal.py  isolines.py  simple.py
src/fracsim/simulation/: analysis.py  parameters.py  plotting.py  postprocessing.py  simulation.py
src/fracsim/utils/: image_type.py  path_helpers.py  structured_mesh.py  tec.py
src/measure/: curvature.py  fractal.py  isolines.py  measures.py  simple.py
src/simulation/: analysis.py  parameters.py  plotting.py  postprocess.py  postprocessing.py  simulation.py
src/tests/: test_fractal_dim.ipynb
src/utils/: image_type.py  isolines.py  mesh_helpers.py  path_helpers.py  random_field_generator.py  structured_mesh.py
tests/: test_fractal_dim.ipynb
