[project]
name = "fracsim"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "psutil",
    "gstools",
    "matplotlib",
    "meshio",
    "pyvista",
    "scikit-image",
    "scipy",
    "opencv-python",
    "dask[complete]",
    "distributed",
    "bokeh",
    "Pillow",
    "jinja2",
    "asyncssh",
]